# opencv-window-segmentation

./: .gitignore  01_download_images.py  04_train_model.py  README.md  pyproject.toml  training_config.yaml
images/: IMG_20230914_150755112_HDR.json  IMG_20230914_150810123.json  IMG_20230914_150826421_HDR.json  IMG_20230914_150947098.json  IMG_20230914_150958862.json  IMG_20230914_151010954.json  L0NvbnRlbnQvY21zL2F3c2Nkbi9pbWFnZXMvcHJvZHVjdHMvNzU1X0F3bmluZ1dpbmRvd19IRVJPLmpwZw==.json  L21lZGlhL3RydC8wNzEzMTMybDAuanBn.json  L29yaWdpbmFscy84Yi9iMi84Zi84YmIyOGZmMzI1MTU0YmM0ZmQyNGIwNzNkOWI4ZjZiMC5qcGc=.json  L2NoaWNhZ28td2luZG93LWd1eS9pbWFnZXMvZl9hdXRvLHFfYXV0by92MTU5NTM3Mzc3Ny9kb3VibGUtaHVuZy13aW5kb3dzL2RvdWJsZS1odW5nLXdpbmRvd3MuanBn.json  L2NvbnRlbnQvZGFtL2ltYWdlcy9oZ3R2L2Z1bGxzZXQvMjAyMi84LzgvMC9PcmlnaW5hbF9KZW5uaWUtQW5kcmV3c19Ib3ctdG8tQnVpbGQtU2h1dHRlcnMtYmVhdXR5X2guanBn.json  L2hkdXMvZW5fVVMvRFRDQ09NTkVXL0FydGljbGVzL2VncmVzcy13aW5kb3ctYnV5aW5nLWd1aWRlLXNlY3Rpb24tMy5qcGc=.json  L2ltYWdlcy9zdHlsZXMvYXduaW5nLmpwZw==.json  L3Bob3Rvcy85NTAwNTQvcGV4ZWxzLXBob3RvLTk1MDA1NC5qcGVn.json  L3NpdGVzL2RlZmF1bHQvZmlsZXMvc3R5bGVzL2Jhc2ljX2ltYWdlL3B1YmxpYy8yMDIxLTA5L0JlZHJvb20uanBn.json  L3VwbG9hZHMvaW1hZ2UvNWYwMDMxM2JjZDNhYi5qcGc=.json  L3VwbG9hZHMvaW1hZ2VzL25ld3MvV1dfMjAxOF9UQ1NfQkFUSF9DTV9vcGVuLTgwMXgxMjAxLWRjOTg3OTcuanBn.json  L3VwbG9hZHMvcGhvdG8vMTgwMEFzcGVrdF9Bd25pbmdfUGljdHVyZS5qcGc=.json  L3dlYnJlcy9JbWFnZS93aW5kb3dzLWRvb3JzL2VncmVzczEtaGVhZGVyLmpwZw==.json  L3dlYnJlcy9pbWFnZS9wcm9qZWN0LWZvcm1zLzE0MTBfYWZ0ZXIuanBn.json  (+7 more)
window-images/: IMG_20230914_142123896.json  (+20 more)
(+60 files in other folders)
