[tool.poetry]
name = "opencv-window-segmentation"
version = "0.1.0"
description = ""
authors = ["Andreas Copan <avcopan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
icrawler = "^0.6.7"
six = "^1.16.0"
pillow = "^10.0.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
labelme = "^5.3.1"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
